test_report.txt

> react-typescript-starter@0.1.0 test
> react-scripts test "--coverage"

FAIL src/Semesters/Semester.test.tsx
  ● Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    /home/runner/work/cis-scheduler-team-27/cis-scheduler-team-27/node_modules/react-dnd-html5-backend/dist/index.js:1
    ({"Object.<anonymous>":function(module,exports,require,__dirname,__filename,jest){import { HTML5BackendImpl } from './HTML5BackendImpl.js';
                                                                                      ^^^^^^

    SyntaxError: Cannot use import statement outside a module

      1 | import React from "react";
      2 | import { DndProvider } from "react-dnd";
    > 3 | import { HTML5Backend } from "react-dnd-html5-backend";
        | ^
      4 | import { Semester } from "../interfaces/Semester";
      5 | import { SemesterView } from "./SemesterView";
      6 |

      at Runtime.createScriptFromCode (node_modules/jest-runtime/build/index.js:1728:14)
      at Object.<anonymous> (src/Semesters/SemesterList.tsx:3:1)

FAIL src/Plan/Plan.test.tsx
  ● Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    /home/runner/work/cis-scheduler-team-27/cis-scheduler-team-27/node_modules/react-dnd-html5-backend/dist/index.js:1
    ({"Object.<anonymous>":function(module,exports,require,__dirname,__filename,jest){import { HTML5BackendImpl } from './HTML5BackendImpl.js';
                                                                                      ^^^^^^

    SyntaxError: Cannot use import statement outside a module

      1 | import React from "react";
      2 | import { DndProvider } from "react-dnd";
    > 3 | import { HTML5Backend } from "react-dnd-html5-backend";
        | ^
      4 | import { Semester } from "../interfaces/Semester";
      5 | import { SemesterView } from "./SemesterView";
      6 |

      at Runtime.createScriptFromCode (node_modules/jest-runtime/build/index.js:1728:14)
      at Object.<anonymous> (src/Semesters/SemesterList.tsx:3:1)

FAIL src/Welcome.test.tsx
  ● Welcome component tests › Clicking button displays instructions

    expect(received).toHaveLength(expected)

    Expected length: 1
    Received length: 0
    Received array:  []

      17 |             /Add you wanted classes and make mock semesters to see how you can graduate./
      18 |         );
    > 19 |         expect(welcomeMessage).toHaveLength(1);
         |                                ^
      20 |     });
      21 | });
      22 |

      at Object.<anonymous> (src/Welcome.test.tsx:19:32)
      at TestScheduler.scheduleTests (node_modules/@jest/core/build/TestScheduler.js:333:13)
      at runJest (node_modules/@jest/core/build/runJest.js:404:19)
      at _run10000 (node_modules/@jest/core/build/cli/index.js:320:7)
      at runCLI (node_modules/@jest/core/build/cli/index.js:173:3)

-------------------------|---------|----------|---------|---------|-------------------
File                     | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
-------------------------|---------|----------|---------|---------|-------------------
All files                |    2.41 |     6.25 |    2.56 |    2.54 |                   
 src                     |    6.52 |    14.28 |    7.14 |    6.66 |                   
  App.tsx                |       0 |      100 |       0 |       0 | 12                
  CourseCard.tsx         |       0 |      100 |       0 |       0 | 5-13              
  CourseDisplay.tsx      |       0 |        0 |       0 |       0 | 11-18             
  CourseEditor.tsx       |       0 |        0 |       0 |       0 | 28-92             
  CoursePool.tsx         |       0 |        0 |       0 |       0 | 8-23              
  CourseView.tsx         |       0 |        0 |       0 |       0 | 14-83             
  interfaces.tsx         |       0 |        0 |       0 |       0 |                   
  openingInstruction.tsx |     100 |      100 |     100 |     100 |                   
 src/Plan                |       0 |        0 |       0 |       0 |                   
  AddPlan.tsx            |       0 |      100 |       0 |       0 | 14-40             
  PlanEditor.tsx         |       0 |      100 |       0 |       0 | 16-56             
  PlanList.tsx           |       0 |      100 |       0 |       0 | 14-17             
  PlanView.tsx           |       0 |        0 |       0 |       0 | 17-21             
  Planner.tsx            |       0 |        0 |       0 |       0 | 9-34              
 src/Semesters           |       0 |        0 |       0 |       0 |                   
  AddSemester.tsx        |       0 |      100 |       0 |       0 | 14-53             
  SemesterControl.tsx    |       0 |        0 |       0 |       0 | 8-37              
  SemesterEditor.tsx     |       0 |      100 |       0 |       0 | 16-82             
  SemesterList.tsx       |       0 |      100 |       0 |       0 | 16-19             
  SemesterView.tsx       |       0 |        0 |       0 |       0 | 20-53             
 src/interfaces          |       0 |        0 |       0 |       0 |                   
  Course.ts              |       0 |        0 |       0 |       0 |                   
  Plan.tsx               |       0 |        0 |       0 |       0 |                   
  Semester.tsx           |       0 |        0 |       0 |       0 |                   
-------------------------|---------|----------|---------|---------|-------------------
Test Suites: 3 failed, 3 total
Tests:       1 failed, 1 passed, 2 total
Snapshots:   0 total
Time:        3.947 s
Ran all test suites.
